Simple Random Rectangle Obstracles and Jumping Over Them

--- a/Delta Task 2/index.html
+++ b/Delta Task 2/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Game Delta Task 2</title>
+        <title>2D Game</title>
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
-<body>
-    <canvas id="gameArea"></canvas>
-    <div id="div01">
-    </div>
-</body>
-<script type="text/javascript" src="index.js"></script>
+    <body>
+        <div id="divCanvas">
+            <canvas id="canvas" width="600" height="300"></canvas>
+        </div>
+        <p id="p01">Hello</p>
+    </body>
+    <script type="text/javascript" src="index.js"></script>
 </html>
