--- a/Delta Task 2/index.html
+++ b/Delta Task 2/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>2D Game</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <title>Game Delta</title>
     </head>
     <body>
-        <div id="divCanvas">
-            <canvas id="canvas" width="600" height="300"></canvas>
+        <div id="canvas_div">
         </div>
-        <p id="p01">Hello</p>
+        <p id="y_coordinate_print"></p>
     </body>
     <script type="text/javascript" src="index.js"></script>
 </html>
